feat(rest): add rate limit headers to swagger
